intel/bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/log.txt
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:38:18: error: assigning to 'int *' from incompatible type 'void *'
                tool->sample = process_event_sample_stub;
                               ^~~~~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:40:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->mmap = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:42:17: error: assigning to 'int *' from incompatible type 'void *'
                tool->mmap2 = process_event_stub;
                              ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:44:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->comm = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:46:22: error: assigning to 'int *' from incompatible type 'void *'
                tool->namespaces = process_event_stub;
                                   ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:48:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->fork = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:50:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->exit = process_event_stub;
                             ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:62:16: error: assigning to 'int *' from incompatible type 'void *'
                tool->read = process_event_sample_stub;
                             ^~~~~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:64:20: error: assigning to 'int *' from incompatible type 'void *'
                tool->throttle = process_event_stub;
                                 ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:66:22: error: assigning to 'int *' from incompatible type 'void *'
                tool->unthrottle = process_event_stub;
                                   ^~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:74:20: error: assigning to 'int *' from incompatible type 'void *'
                tool->build_id = process_event_op2_stub;
                                 ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:82:20: error: assigning to 'int *' from incompatible type 'void *'
                tool->id_index = process_event_op2_stub;
                                 ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:84:25: error: assigning to 'int *' from incompatible type 'void *'
                tool->auxtrace_info = process_event_op2_stub;
                                      ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:88:26: error: assigning to 'int *' from incompatible type 'void *'
                tool->auxtrace_error = process_event_op2_stub;
                                       ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:100:21: error: assigning to 'int *' from incompatible type 'void *'
                tool->time_conv = process_event_op2_stub;
                                  ^~~~~~~~~~~~~~~~~~~~~~
bench_214/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main/extr_.linuxtoolsperfutilsession.c_perf_tool__fill_defaults_with_main.c:102:19: error: assigning to 'int *' from incompatible type 'void *'
                tool->feature = process_event_op2_stub;
                                ^~~~~~~~~~~~~~~~~~~~~~
16 errors generated.
HLS FPGA Parse FAILED.
